emulator/tests/snapshots/diagnostics__missing_register_name.snap
---
source: emulator/tests/diagnostics.rs
assertion_line: 87
expression: "check_parse_errors(\"    ld %, %a\")"
---
error: found ',' expected something else
  ┌─ test.S:1:9
  │
1 │     ld %, %a
  │         ^
  │         │
  │         found ',' expected something else
  │         ',' expected something else
